# bangla-sign-language-recognition

./: .env.example  .gitignore  .tmp_dataset_check.py  .tmp_dataset_check_stdlib.py  PROJECT_STATUS.md  README.md  pyproject.toml
.github/instructions/: sign-language-training-workflow.instructions.md
comparison model/BDSLW_SPOTER/: bdsl-spotter-local.ipynb  create_data.py  run_phase2.py  train.py
comparison model/BDSLW_SPOTER/src/: dataset_analysis.py
docs/: BDSL_SPOTER_understanding.md  BDSL_SPOTER_vram.md  README.md  agents.md  architecture.md  data-quality-and-risks.md  development-phases.md  legacy-content-preservation.md  memory.md  model-comparison.md  training-operations.md
new model/BdSL-Enhanced-SignNet/: AUTHENTICATION_FIXED.md  DATASET_ISSUES_2026-01-31.md  IMPROVEMENT_PLAN.md  ISSUE_RESOLVED.md  QUICKSTART_WANDB.md  README.md  READY_TO_USE.md  TECHNICAL_REFERENCE.md  WANDB_DOCS_INDEX.md  WANDB_INTEGRATION_SUMMARY.md  WANDB_SETUP.md  check_wandb.py  check_wandb_version.py  create_splits.py  extract_multimodal_landmarks.py  extract_with_mediapipe_v2.py  requirements.txt  setup_wandb.py  signet_v2_complete.ipynb  signet_v2_notebook_fixed.ipynb  simple_extract_multimodal.py  test_auth.py  test_mediapipe_10x.py  train_model.py  train_signet_v2.py  train_signet_v2_optimized.py
new model/BdSL-Enhanced-SignNet/processed/: test_samples.txt  train_samples.txt  val_samples.txt
new model/BdSL-Enhanced-SignNet/src/: __init__.py
wandb/run-20260426_052623-sillebwa/: run-sillebwa.wandb
wandb/run-20260426_053732-jgjmjggr/: run-jgjmjggr.wandb
(+637 files in other folders)
